--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -218,14 +218,14 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<blockquote>➲ <b> Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b></blockquote>\n\n<blockquote><b>➠ Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>➠ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>➠ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}</blockquote>"
+strea_1 : "<blockquote expandable>➜🎬 <b> sɴᴏᴡʏ ᴍᴜsɪᴄ ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</b>\n🎧 <b>ᴛɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n⏱️ <b>ʟᴇɴɢᴛʜ :</b> {2} ᴍɪɴᴜᴛᴇs\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇʀ :</b> {3}</blockquote>"
 stream_2 : "➲ <b> Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>➠ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>➠ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}" 
 stream_3 : "➲ <b>Mᴀᴅᴇ ʙʏ ➠ [ɪɴꜰɪɴɪᴛʏ](https://t.me/gxinfinity_support)"
 
 #General
-CLOSE_BUTTON  : "↻ ᴄʟᴏsᴇ ↻"
-CLOSEMENU_BUTTON  : "↻ ᴄʟᴏsᴇ ↻"
-BACK_BUTTON : "↻ ʙᴀᴄᴋ ↻"
+CLOSE_BUTTON  : "❍ ᴄʟᴏsᴇ ❍"
+CLOSEMENU_BUTTON  : "❍ ᴄʟᴏsᴇ ❍"
+BACK_BUTTON : "✦ ʙᴀᴄᴋ ✦"
 NEXT_PAGE: "▷"
 BACK_PAGE: "◁"
 UNBAN_BUTTON : "• ᴜɴʙᴀɴ •"
