--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -291,8 +291,8 @@ H_B_26 : "Fᴏʀ-Pᴜᴘʟɪᴄ"
 H_B_27 : "Tʀᴀɴꜱʟᴀᴛᴇ"
 H_B_28 : "Zᴏᴍʙɪᴇꜱ"
 
-P_B_1 : "⛦ ᴀᴜᴅɪᴏ "
-P_B_2 : " ᴠɪᴅᴇᴏ 🥀"
+P_B_1 : "❍ ᴀᴜᴅɪᴏ ᴘʟᴀʏ"
+P_B_2 : "❍ ᴠɪᴅᴇᴏ ᴘʟᴀʏ"
 P_B_3 : "⛦ ʟɪᴠᴇ sᴛʀᴇᴀᴍ "
 P_B_4 : " ɴᴏʀᴍᴀʟ 🥀"
 
